PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 7.2

- Calendar:
  . Fix integer overflows (Joshua Rogers)

- Core:
  . Removed the sql.safe_mode directive. (Kalle)
  . Removed support for Netware. (Kalle)
  . Fixed bug #54535 (WSA cleanup executes before MSHUTDOWN). (Kalle)
  . Implemented FR #69791 (Disallow mail header injections by extra headers)
    (Yasuo)
  . Implemented FR #49806 (proc_nice() for Windows). (Kalle)
  . Fix pthreads detection when cross-compiling (ffontaine)
  . Fixed bug #73215 (uniqid() should use better random source). (Yasuo)
  . Fixed bug #73337 (try/catch not working with two exceptions inside a same
    operation). (Dmitry)
  . Implemented FR #72768 (Add ENABLE_VIRTUAL_TERMINAL_PROCESSING flag for
    php.exe). (Michele Locati)
  . Implemented "Convert numeric keys in object/array casts" RFC, fixes
    bugs #53838, #61655, #66173, #70925, #72254, etc. (Andrea)

- Date:
  . Fixed bug #69587 (DateInterval properties and isset). (jhdxr)

- EXIF:
  . Added support for vendor specific tags for the following formats:
    Samsung, DJI, Panasonic, Sony, Pentax, Minolta & Sigma/Foveon. (Kalle)
  . Fixed bug #72682 (exif_read_data() fails to read all data for some
    images). (Kalle)
  . Fixed bug #71534 (Type confusion in exif_read_data() leading to heap
    overflow in debug mode). (hlt99 at blinkenshell dot org, Kalle)
  . Fixed bug #68547 (Exif Header component value check error).
    (sjh21a at gmail dot com, Kalle)
  . Fixed bug #66443 (Corrupt EXIF header: maximum directory nesting level
    reached for some cameras). (Kalle)
  . Fixed Redhat bug #1362571 (PHP not returning full results for
    exif_read_data function). (Kalle)

- GD:
  . Implemented imageresolution as getter and setter (Christoph)

- GMP:
  . Fixed bug #70896 (gmp_fact() silently ignores non-integer input). (Sara)

- Mbstring: